--- a/6.26/6.26/6.26.vcxproj
+++ b/6.26/6.26/6.26.vcxproj
@@ -64,7 +64,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="main1.c" />
+    <ClCompile Include="main1.cpp" />
+    <ClCompile Include="mian2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
